fix arrow link wrapping on columns

--- a/components/ui/oneThirdColumn/oneThirdColumn.module.scss
+++ b/components/ui/oneThirdColumn/oneThirdColumn.module.scss
@@ -36,6 +36,7 @@
   line-height: 2;
   text-decoration: none;
   color: var(--fountain-blue);
+  white-space: nowrap;
 
   &::after {
     transition: transform 0.3s ease-out;
